--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher"
-                 android:theme="@android:style/Theme.Holo">
+                 android:theme="@style/Theme.Reader">
         <activity android:name="MainActivity"
                   android:label="@string/app_name">
             <intent-filter>
