--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -5,8 +5,11 @@
           android:versionName="1.0.2">
     <uses-sdk android:minSdkVersion="14" android:targetSdkVersion="16"/>
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher"
                  android:theme="@style/Theme.Reader">
         <activity android:name="MainActivity"
